--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "author": "istiakhasan",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
@@ -29,10 +31,14 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status": "^1.7.3",
+    "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.1.0",
-    "mongoose": "^8.0.2"
+    "mongoose": "^8.0.2",
+    "zod": "^3.22.4"
   }
 }
