--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.1.0",
     "mongoose": "^8.0.2",
+    "sslcommerz-lts": "^1.1.0",
     "zod": "^3.22.4"
   }
 }
