--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongodb": "^4.0.7",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
@@ -34,6 +35,7 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@types/swagger-jsdoc": "^6.0.4",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -44,6 +46,8 @@
     "lint-staged": "^15.1.0",
     "mongoose": "^8.0.2",
     "sslcommerz-lts": "^1.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "zod": "^3.22.4"
   }
 }
