--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongodb": "^4.0.7",
+    "@types/swagger-ui-dist": "^3.30.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
@@ -45,9 +46,11 @@
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.1.0",
     "mongoose": "^8.0.2",
+    "react-share": "^5.0.3",
     "sslcommerz-lts": "^1.1.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
+    "swagger-jsdoc": "^4.1.6",
+    "swagger-ui-dist": "^4.1.6",
+    "swagger-ui-express": "^4.1.6",
     "zod": "^3.22.4"
   }
 }
